<resources>
    <string name="app_name">Duckietown Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Duckietown Autolab</string>
    <string name="list_fragment_label">Device list</string>
    <string name="map_fragment_label">Map</string>

    <string name="device_list_status_placeholder">Online: %d/%d</string>
    <string name="device_list_status">Online: %d/%d</string>
    <string name="device_list_item_placeholder">Device Item</string>
    <string name="device_item_status_icon">Device status</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Devices list titles -->
    <string name="autobots_title">Autobots</string>
    <string name="watchtowers_title">Watchtowers</string>
    <string name="cameras_title">Cameras</string>
    <string name="autobot_info_title">Autobot %d</string>
    <string name="watchtower_info_title">Watchtower %d</string>
    <string name="camera_info_title">Camera %d</string>

    <!-- Sync Preferences -->
    <string name="net_title">Local / Web</string>
    <string name="local_url_title">Local url</string>
    <string name="external_url_title">External url</string>
    <string name="bot_url_title">Bot url</string>
    <string name="camera_url_title">Camera url</string>
    <string name="watchtower_url_title">Watchtower url</string>
    <string name="update_time_title">Update time in seconds</string>
    <string name="menu_about_title">About</string>
    <string name="menu_about_text">This application created for Duckietown Autolab in ETU. Authors are Selezneva Anastasia, Tinyakov Sergey and Tsaplin Ilya.</string>
    <string name="menu_url_hint">The url must begin with protocol, for example, http</string>
    <string name="menu_autobot_route_hint">
        For the route last two zeros define the autobot number.
        For example, for Autobot 07 url \"/route/autobot00/status\" will be changed to \"/route/autobot07/status\"</string>
    <string name="menu_watchtower_route_hint">
        For the route last two zeros define the watchtower number.
        For example, for Watchtower07 url \"/route/watchtower00/status\" will be changed to \"/route/watchtower07/status\"</string>
    <string name="menu_camera_route_hint">
        For the route last zero define the camera number.
        For example, for Camera 7 \"/route/camera0/video\" will be changed to \"/route/camera7/video\"</string>
    <string name="menu_about_positive_button_text">OK</string>

    <!-- Default Url Values -->
    <string name="update_time_default_value">5</string>
    <string name="local_url_default_value">http://10.135.4.230</string>
    <string name="external_url_default_value">http://autolab.moevm.info</string>
    <string name="bot_url_default_value">/dbp/autobot00/health</string>
    <string name="camera_url_default_value">/camera_0/live.mjpg</string>
    <string name="watchtower_url_default_value">/dbp/watchtower00/health</string>

    <string name="main_autobots_button">Autobots</string>
    <string name="main_watchtowers_button">Watchtowers</string>
    <string name="main_cameras_button">Cameras</string>
    <string name="main_map_button">Map</string>
    <string name="main_aruco_button">Scan ArUco</string>
    <string name="map_send_button">Send</string>

    <string name="filter_option_only_online">Only online</string>
    <string name="filter_option_max_battery">Battery range in %</string>
    <string name="filter_button_apply">Apply</string>
    <string name="filter_option_min_device_temperature">Min device temperature, °C</string>
    <string name="filter_option_max_device_temperature">Max device temperature, °C</string>
    <string name="filter_option_min_memory_used">Max memory left on device, Gb</string>

    <!-- Bot info -->
    <string name="bot_status_title">Bot status</string>
    <string name="battery_title">Battery</string>
    <string name="temp_title">Temperature</string>
    <string name="memory_title">Memory(used)</string>
    <string name="joystick_title">Joystick</string>
    <string name="start_demo_title">Start Demo</string>
    <string name="stop_demo_title">Stop Demo</string>
    <string name="bot_video_title">Video</string>
    <string name="set_time_title">Set time</string>
    <string name="autobot_start_demo_connection_failed">Cannot connect to the autobot. Check your internet connection or try later</string>
    <string name="autobot_offline_message">Autobot%02d is offline. Check that the autobot%02d is turned on</string>
    <string name="dialog_info_error_bad_url">Cannot recognize url. Make sure the settings are correct</string>
    <string name="how_to_use_autobot_info">On this screen you can see status information about autobot. Also you can perform some actions</string>
    <string name="how_to_use_autobot_control">On this screen you can control the autobot movements</string>
    <string name="how_to_use_device_list">On this screen you can see the list of the devices. Tapping a device will open the status screen</string>
    <string name="how_to_use_image_stream">On this screen you can see video from devices camera. Delay might be high</string>
    <string name="how_to_use_camera">On this screen you can see video from cameras over polygon. Delay might be high</string>
    <string name="how_to_use_map">On this screen you can see the map of Autolab polygon. You can set two points and perform some action</string>
    <string name="how_to_use_scan_aruco">On this screen you can scan autobots qr-code to open its status screen</string>
    <string name="dialog_info_error_long_string">Cannot connect to the autobot. Check your internet connection or try later. Just test more lines for error, because on small smartphones no space for text and image</string>
    <string name="autobot_set_time_no_internet_connection">Cannot connect to the Internet to set time</string>
    <string name="autobot_set_time_failure">Cannot set time. Request failed</string>
    <string name="autobot_set_time_success">Time set successfully</string>

    <!-- Bot control -->
    <string name="bot_info_title">Bot information</string>
    <string name="bot_speed_title">Current speed</string>
    <string name="joystick_forward_button_description">FORWARD</string>
    <string name="joystick_backward_button_description">BACKWARD</string>
    <string name="joystick_left_button_description">LEFT</string>
    <string name="joystick_right_button_description">RIGHT</string>

    <!-- Camera -->
    <string name="camera_view_previous_button">Previous</string>
    <string name="camera_view_next_button">Next</string>

    <!-- ArUco -->
    <string name="aruco_title">Scan ArUco</string>
    <string name="menu_item_filter">Filter</string>
    <string name="menu_item_settings">Settings</string>
    <string name="map_button_clear_point">Clear points</string>
    <string name="autobot_status_item_placeholder">Unknown info</string>

    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_info">How to use</string>
    <string name="dialog_info_error_image_description">Image for error or info</string>
    <string name="settings_menu_about">About</string>
    <string name="menu_how_to_use">How To Use</string>
    <string name="menu_item_virtual_scan_01">SCAN</string>
    <string name="filter_button_reset">Reset</string>
</resources>