<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.etu.duckietownandroid.MainActivity">

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/filter"
        android:title="@string/menu_item_filter"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_how_to_use"
        android:icon="@drawable/about"
        android:title="@string/menu_how_to_use"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_item_test"
        android:icon="@drawable/settings"
        android:title="@string/menu_item_settings"
        android:visible="false"
        app:showAsAction="always"/>

</menu>