<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_margin="@dimen/main_logo_margin"
            android:layout_marginTop="@dimen/main_logo_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/duckietown_logo" />

        <Button
            android:id="@+id/autobots_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_autobots_button" />

        <Button
            android:id="@+id/watchtowers_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_watchtowers_button" />

        <Button
            android:id="@+id/cameras_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_cameras_button" />

        <Button
            android:id="@+id/map_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_map_button" />

        <Button
            android:id="@+id/aruco_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_aruco_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>