<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.example.duckietownandroid.MainFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_MainFragment_to_ListFragment"
            app:destination="@id/ListFragment" />
        <action
            android:id="@+id/action_MainFragment_to_MapFragment"
            app:destination="@id/MapFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListFragment"
        android:name="com.example.duckietownandroid.FragmentDeviceList"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_ListFragment_to_AutobotInfoFragment"
            app:destination="@id/AutobotInfoFragment" />
        <action
            android:id="@+id/action_ListFragment_to_watchtowerFragment"
            app:destination="@id/watchtowerFragment" />
    </fragment>
    <fragment
        android:id="@+id/MapFragment"
        android:name="com.example.duckietownandroid.MapFragment"
        android:label="@string/map_fragment_label"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/AutobotInfoFragment"
        android:name="com.example.duckietownandroid.AutobotInfoFragment"
        android:label="@string/autobot_info_title"
        tools:layout="@layout/fragment_autobot_info" />
    <fragment
        android:id="@+id/watchtowerFragment"
        android:name="com.example.duckietownandroid.WatchtowerFragment"
        android:label="fragment_watchtower"
        tools:layout="@layout/fragment_watchtower" />
</navigation>